# youtube-live-downloader

./: .gitignore  CMakeLists.txt  README.md  example-membership-msg-2.md  example-membership-msg.md  example-normal-msg.md  example-paid-msg.md  example.json  hello.json  hello.txt  main.cpp  minimalcookie.curl  timestamp0_minimalcookie_dataraw.json  timestamp32672.json  timestamp99999.json  youtubepage.html  ytInitialData.json
documentation/: example-chat.json  example-curl.md  example-emoji-text.json  example-normal-msg.md  example-paid-msg.md  minimalcookie_dataraw.curl  timestamp0.json  timestamp0_minimalcookie.json  timestamp1000.json  timestamp10000.json  timestamp10001.json  timestamp2000.json  timestamp3000.json  timestamp4000.json  timestamp46813.json  timestamp4999.json  timestamp5000.json  timestamp69224.json
include/: chatrender.h
include/yld/: chat.h  chatreplayitem.h  chatresponse.h  chatwindow.h  ytchatrender.h
src/: chat.cpp  chatrender.cpp
src/ytchatdl/: CMakeLists.txt  chat.cpp  main.cpp
src/ytchatrender/: CMakeLists.txt  chatwindow.cpp  main.cpp  ytchatrender.cpp
